Adds the right project

--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
             <div class="about-containers">
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/project-1.png" alt="Project 1" class="project-img">
+                    <img src="./assets/projectNN.jpeg" alt="Project 1" class="project-img">
                 </div>
-                <h2 class="experience-sub-title project-title">Project One</h2>
+                <h2 class="experience-sub-title project-title">Neural Network from Scratch</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
@@ -277,9 +277,9 @@
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/project-2.png" alt="Project 2" class="project-img">
+                    <img src="./assets/projectTB.jpeg" alt="Project 2" class="project-img">
                 </div>
-                <h2 class="experience-sub-title project-title">Project Two</h2>
+                <h2 class="experience-sub-title project-title">Telegram Finance bot</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
@@ -291,9 +291,9 @@
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/project-3.png" alt="Project 3" class="project-img">
+                    <img src="./assets/projectAppChat.png" alt="Project 3" class="project-img">
                 </div>
-                <h2 class="experience-sub-title project-title">Project Three</h2>
+                <h2 class="experience-sub-title project-title">Flutter Chat App</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
