Updates GitHub Repo URLs

--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/jagdeepsh'">Github</button>
+                    onclick="location.href='https://github.com/jagdeepsh/neural_network'">Github</button>
                     <button 
                     class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/jagdeepsh'">Live Demo</button>
+                    onclick="location.href='https://github.com/jagdeepsh/neural_network'">Live Demo</button>
                 </div>
             </div>
             <div class="details-container color-container">
@@ -283,10 +283,10 @@
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/jagdeepsh'">Github</button>
+                    onclick="location.href='https://github.com/jagdeepsh/telegram_finance_bot'">Github</button>
                     <button 
                     class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/jagdeepsh'">Live Demo</button>
+                    onclick="location.href='https://github.com/jagdeepsh/telegram_finance_bot'">Live Demo</button>
                 </div>
             </div>
             <div class="details-container color-container">
@@ -297,10 +297,10 @@
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/jagdeepsh'">Github</button>
+                    onclick="location.href='https://github.com/jagdeepsh/Flutter_Chat_App'">Github</button>
                     <button 
                     class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/jagdeepsh'">Live Demo</button>
+                    onclick="location.href='https://github.com/jagdeepsh/Flutter_Chat_App'">Live Demo</button>
                 </div>
             </div>
         </div>
