Updates about me

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus maiores consectetur unde. Maiores tempora atque porro accusamus ut sequi accusantium optio officiis, hic ipsam, dolore amet asperiores vero quasi deleniti natus deserunt! Recusandae repudiandae earum sequi consequatur, deserunt sapiente voluptatem doloribus dicta dolores possimus facilis quisquam nesciunt est perferendis dolor!</p>
+                    <p>I'm currently a Computer Science student at NUS, specializing in AI, and I have a strong passion for exploring this dynamic field. My strengths lie in backend development, and I’m always eager to expand my knowledge and improve my skills. Though I began my academic journey in business, I fell in love with technology and programming, discovering that problem-solving is an underrated skill that can be honed through CS. Outside of programming, I enjoy playing the guitar and capturing wildlife through photography. I firmly believe in embracing discomfort to foster growth and development.</p>
                 </div>
             </div>
         </div>
