--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/projectTB.jpeg" alt="Project 2" class="project-img">
+                    <img src="./assets/projectTB.png" alt="Project 2" class="project-img">
                 </div>
                 <h2 class="experience-sub-title project-title">Telegram Finance bot</h2>
                 <div class="btn-container">
