--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         alt="Experience icon" 
                         class="icon">
                         <h3>Experience</h3>
-                        <p>2+ years <br>Frontend Development</p>
+                        <p>1+ years <br>Software Development</p>
                     </div>
                     <div class="details-container">
                         <img 
