Updates About me photo

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="section-container">
             <div class="section__pic-container">
                 <img 
-                src="./assets/guitar.png" 
+                src="./assets/SOH.png" 
                 alt="Profile Picture" 
                 class="about-pic">
             </div>
