Updates About me education order

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         alt="Education icon" 
                         class="icon">
                         <h3>Education</h3>
-                        <p>Diploma in Business Studies<br>Bachelors in Computer Science</p>
+                        <p>Bachelors in Computer Science<br>Diploma in Business Studies</p>
                     </div>
                 </div>
                 <div class="text-container">
